--- a/views/index.html
+++ b/views/index.html
@@ -11,7 +11,12 @@
       <meta content="CIRRUS WEBSITE" name="description" />
       <link href="/assets/ico/favicon.png" rel="shortcut icon" />
       
-   
+    <title> Ilya Tinker Project</title>
+
+
+        
+
+                <div class="col-lg-4">
                     <h3>Newsletter</h3>
                     <p>Register to our newsletter and be updated with the latests information regarding our services, offers and much more.</p>
                     <p>
@@ -21,17 +26,23 @@
                             <div class="col-lg-10">
                               <input class="form-control" id="fname" name="fname" placeholder="First Name" type="text" />
                             </div>
+                           <div class="form-group">
+                            <label class="col-lg-4 control-label" for="inputEmail1"></label>
+                            <div class="col-lg-10">
+                              <input class="form-control" id="inputEmail1" name="email" placeholder="Email" type="email" />
+                            </div>
                          
                             <label class="col-lg-4 control-label" for="lname"></label>
                             <div class="col-lg-10">
                               <input class="form-control" id="lname" name="lname" placeholder="Last Name" type="text" />
                             </div>
                           </div>
-                           <div class="form-group">
-                            <label class="col-lg-4 control-label" for="inputEmail1"></label>
+                            <div class="form-group">
+                            <label class="col-lg-4 control-label" for="inputZip"></label>
                             <div class="col-lg-10">
-                              <input class="form-control" id="inputEmail1" name="email" placeholder="Email" type="email" />
+                              <input class="form-control" id="inputZip" name="Zip" placeholder="Zip" type="Zip" />
                             </div>
+
                           </div>
 
                           <div class="form-group">
@@ -47,21 +58,14 @@
                 </div>
                 
                 <div class="col-lg-4">
-                    <h3>The Cirrus Community</h3>
-                    <p>Come join us for a day of volunteering or request a tour of our facilities.  We would love to hear from you about ideas that can make us better!</p>
+                    <h3>Ilya's Tinker Project</h3>
+                    <p>Tinkering away since 2015</p>
                 </div>
 
             </div>
         
         </div>
 
-        <div id="footerwrap">
-            <div class="container">
-                <h4>Created by <a href="#">CIRRUS</a> - Copyright 2014</h4>
-            </div>
-        </div>
-
-    
     
         
 
@@ -70,6 +74,4 @@
     <script src="/assets/js/jquery.easing.1.3.js" type="text/javascript"></script>
     <script src="/assets/js/jquery-func.js" type="text/javascript"></script>
       
-          <script src="/assets/js/smoothscroll.js" type="text/javascript"></script>
-
   </body></body></html>
