--- a/views/index.html
+++ b/views/index.html
@@ -8,7 +8,6 @@
 
     <meta charset="utf-8" />
       <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-      <meta content="CIRRUS WEBSITE" name="description" />
       <link href="/assets/ico/favicon.png" rel="shortcut icon" />
       
     <title> Ilya Tinker Project</title>
@@ -17,8 +16,8 @@
         
 
                 <div class="col-lg-4">
-                    <h3>Newsletter</h3>
-                    <p>Register to our newsletter and be updated with the latests information regarding our services, offers and much more.</p>
+                    <h3>Ilya Tinker Project</h3>
+                    <p>Have a tinker at my toil.</p>
                     <p>
                         <form class="form-horizontal" role="form" method="post" action="/newsletterAdd">
                           <div class="form-group">
@@ -26,17 +25,19 @@
                             <div class="col-lg-10">
                               <input class="form-control" id="fname" name="fname" placeholder="First Name" type="text" />
                             </div>
-                           <div class="form-group">
-                            <label class="col-lg-4 control-label" for="inputEmail1"></label>
-                            <div class="col-lg-10">
-                              <input class="form-control" id="inputEmail1" name="email" placeholder="Email" type="email" />
-                            </div>
                          
                             <label class="col-lg-4 control-label" for="lname"></label>
                             <div class="col-lg-10">
                               <input class="form-control" id="lname" name="lname" placeholder="Last Name" type="text" />
                             </div>
                           </div>
+
+                           <div class="form-group">
+                            <label class="col-lg-4 control-label" for="inputEmail1"></label>
+                            <div class="col-lg-10">
+                              <input class="form-control" id="inputEmail1" name="email" placeholder="Email" type="email" />
+                            </div>
+
                             <div class="form-group">
                             <label class="col-lg-4 control-label" for="inputZip"></label>
                             <div class="col-lg-10">
