--- a/views/index.html
+++ b/views/index.html
@@ -21,14 +21,14 @@
                     <p>
                         <form class="form-horizontal" role="form" method="post" action="/newsletterAdd">
                           <div class="form-group">
-                            <label class="col-lg-4 control-label" for="fname"></label>
+                            <label class="col-lg-4 control-label" for="First_name"></label>
                             <div class="col-lg-10">
-                              <input class="form-control" id="fname" name="fname" placeholder="First Name" type="text" />
+                              <input class="form-control" id="fname" name="First_name" placeholder="First Name" type="text" />
                             </div>
                          
-                            <label class="col-lg-4 control-label" for="lname"></label>
+                            <label class="col-lg-4 control-label" for="Last_name"></label>
                             <div class="col-lg-10">
-                              <input class="form-control" id="lname" name="lname" placeholder="Last Name" type="text" />
+                              <input class="form-control" id="lname" name="Last_name" placeholder="Last Name" type="text" />
                             </div>
                           </div>
 
