--- a/views/index.html
+++ b/views/index.html
@@ -37,6 +37,12 @@
                             <div class="col-lg-10">
                               <input class="form-control" id="inputEmail1" name="email" placeholder="Email" type="email" />
                             </div>
+                         
+                            <label class="col-lg-4 control-label" for="Phone"></label>
+                            <div class="col-lg-10">
+                              <input class="form-control" id="Phone" name="Phone" placeholder="Phone" type="text" />
+                            </div>
+                          </div>
 
                             <div class="form-group">
                             <label class="col-lg-4 control-label" for="inputZip"></label>
