--- a/views/index.html
+++ b/views/index.html
@@ -16,8 +16,8 @@
         
 
                 <div class="col-lg-4">
-                    <h3>Ilya Tinker Project</h3>
-                    <p>Have a tinker at my toil.</p>
+                    <div class=div style="text-align:center"><h1>Ilya Tinker Project</h1>
+                    <div class=div style="text-align:center"><p>Have a tinker at my toil.</p>
                     <p>
                         <form class="form-horizontal" role="form" method="post" action="/newsletterAdd">
                           <div class="form-group">
