--- a/views/index.html
+++ b/views/index.html
@@ -10,7 +10,7 @@
       <meta content="width=device-width, initial-scale=1.0" name="viewport" />
       <link href="/assets/ico/favicon.png" rel="shortcut icon" />
       
-    <title> Ilya Tinker Project</title>
+    <title>Tinker While You Work</title>
 
 
         
