--- a/views/index.html
+++ b/views/index.html
@@ -37,7 +37,7 @@
                            <div class=div style="text-align:center">
                             <label class="col-lg-4 control-label" for="inputEmail1"></label>
                             <div class="col-lg-14">
-                              <input class="form-control" id="inputEmail1" name="email" placeholder="Email" type="email" />
+                              <input class="form-control" id="inputEmail1" name="Email" placeholder="Email" type="email" />
                             </div>
                              
                             <div class=div style="text-align:center">
