--- a/views/index.html
+++ b/views/index.html
@@ -8,7 +8,6 @@
 
     <meta charset="utf-8" />
       <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-      <link href="/assets/ico/favicon.png" rel="shortcut icon" />
       
     <title>Tinker While You Work</title>
 
@@ -19,7 +18,7 @@
                     <div class=div style="text-align:center"><h1>Ilya Tinker Project</h1>
                     <div class=div style="text-align:center"><p>Have a tinker at my toil.</p>
                     <p>
-                        <form class="form-horizontal" role="form" method="post" action="/newsletterAdd">
+                        <form class="form-horizontal" role="form" method="post" action="action.php">
                           <div class="form-group">
                             <div class=div style="text-align:center">
                             <label class="col-lg-4 control-label" for="First_name"></label>
