--- a/views/index.html
+++ b/views/index.html
@@ -1,8 +1,8 @@
 
 
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
-<html><head><script src="/static/111213/js/perf/stub.js" type="text/javascript"></script><link class="user" href="/sCSS/34.0/sprites/1438195776000/Theme3/default/gc/zen-componentsCompatible.css" rel="stylesheet" type="text/css" /><link class="user" href="/sCSS/34.0/sprites/1438195776000/Theme3/default/gc/elements.css" rel="stylesheet" type="text/css" /><link class="user" href="/sCSS/34.0/sprites/1438195776000/Theme3/default/gc/common.css" rel="stylesheet" type="text/css" /><link class="user" href="/sCSS/34.0/sprites/1441046052000/Theme3/gc/dStandard.css" rel="stylesheet" type="text/css" /><link class="user" href="/sCSS/34.0/sprites/1443201808000/Theme3/00D61000000YBpN/00561000000x3KC/gc/dCustom0.css" rel="stylesheet" type="text/css" /><link class="user" href="/sCSS/34.0/sprites/1443201808000/Theme3/00D61000000YBpN/00561000000x3KC/gc/dCustom1.css" rel="stylesheet" type="text/css" /><link class="user" href="/sCSS/34.0/sprites/1443201808000/Theme3/00D61000000YBpN/00561000000x3KC/gc/dCustom2.css" rel="stylesheet" type="text/css" /><link class="user" href="/sCSS/34.0/sprites/1438195776000/Theme3/default/gc/extended.css" rel="stylesheet" type="text/css" /><link class="user" href="/sCSS/34.0/sprites/1438195776000/Theme3/default/gc/setup.css" rel="stylesheet" type="text/css" /></head><body>
-  <head>
+<html><head></head><body>
+  
 <meta HTTP-EQUIV="PRAGMA" CONTENT="NO-CACHE" />
 <meta HTTP-EQUIV="Expires" content="Mon, 01 Jan 1990 12:00:00 GMT" />
 
