--- a/views/index.html
+++ b/views/index.html
@@ -57,7 +57,7 @@
 
                           <div class="form-group">
                             <div class="col-lg-10">
-                              <button class="btn btn-success" type="submit">Sign up!</button>
+                              <input type="submit" value="Submit" />
                             </div>
                           </div>
 
