--- a/views/index.html
+++ b/views/index.html
@@ -18,7 +18,7 @@
                     <div class=div style="text-align:center"><h1>Ilya Tinker Project</h1>
                     <div class=div style="text-align:center"><p>Have a tinker at my toil.</p>
                     <p>
-                        <form class="form-horizontal" role="form" method="post" action="index.html">
+                        <form class="form-horizontal" role="form" method="post" action="action.php">
                           <div class="form-group">
                             <div class=div style="text-align:center">
                             <label class="col-lg-4 control-label" for="First_name"></label>
@@ -64,6 +64,42 @@
                          
 
                        </form>
+soapenv:Envelope xmlns:soapenv="http://schemas.xmlsoap.org/soap/envelope/" xmlns:par="http://exacttarget.com/wsdl/partnerAPI" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+<soapenv:Header>
+    <Security xmlns="http://docs.oasis-open.org/wss/2004/01/oasis-200401-wss-wssecurity-secext-1.0.xsd">
+        <UsernameToken>
+            <Username>la-ipevzner</Username>
+            <Password>welcome@1</Password>
+        </UsernameToken>
+    </Security>
+</soapenv:Header>
+<soapenv:Body>
+    <CreateRequest xmlns="http://exacttarget.com/wsdl/partnerAPI">
+        <Objects xsi:type="TriggeredSend">
+            <Client>
+                <ID>MyClientID</ID>
+            </Client>
+            <TriggeredSendDefinition>
+                <CustomerKey>45185</CustomerKey>
+            </TriggeredSendDefinition>
+            <Subscribers>
+                <SubscriberKey>ipevzner@gmail.com</SubscriberKey>
+                <EmailAddress>ipevzner@gmail.com</EmailAddress>
+                <Attributes>
+                    <Name>First Name</Name>
+                    <Value>Pevzner</Value>
+                    <Name>Last Name</Name>
+                    <Value>Ilya</Value>
+                    <Name>Zip</Name>
+                    <Value>10013</Value>                    
+                    <Name>Phone</Name>
+                    <Value>650-799-9936</Value>
+                </Attributes>
+            </Subscribers>
+        </Objects>
+    </CreateRequest>
+</soapenv:Body>
+                             
                     </p>
                 </div>
                 
